--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@primeng/themes": "19.1.4",
+    "primeicons": "^7.0.0",
     "primeng": "19.1.4",
     "rxjs": "~7.8.0",
     "tailwindcss-primeui": "^0.6.1",
