chore(i18n): set source locale to Spanish (es) in budgets-app

--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,7 @@
   "newProjectRoot": "projects",
   "projects": {
     "budgets-app": {
+      "i18n": { "sourceLocale": "es" },
       "projectType": "application",
       "schematics": {},
       "root": "",
